# apple1-emu

./: .clang-format  .gitattributes  .gitignore  .indent.pro  COPYING  GNUmakefile  Makefile  Makefile.am  Makefile.in  Makefile.msc  Makefile.uw  README  aci.c  aci.h  apple1.c  apple1.conf  apple1.conf.example  apple1.conf.tns  apple1.h  apple1limit.h  apple1limit_checks.h  apple1limit_host.h  build.com  bus.c  bus.h  cli_config.c  cli_config.h  configure  configure.ac  cpu.c  cpu.h  dbg.c  dbg.h  deploy_unixware.exp  disasm.c  disasm.h  embedded_roms.h  font5x7.h  freertos_demo_main.c  freertos_demo_test.sh  (+48 more)
.agents/: AGENTS.md
cassettes/: BASIC.aci  tapeinfo.txt
documentation/: FREERTOS_DEMO.md  README  VXWORKS_RTP.md  building.md  configuration.md  debugger.md  embedding.md  hardware.md  manual.md  plan9-terminal.md  platforms.md  usage.md
roms/: applesoft-lite-microsd.rom  cffa1.rom  jukebox.rom
roms/codetank/: Codetank_GAME1.rom  Codetank_GAME1.txt  Codetank_GAME2.rom  Codetank_GAME2.txt  Codetank_GAME3.rom  Codetank_GAME3.txt  Codetank_GAME4.rom  Codetank_GAME4.txt  Codetank_TEST.rom  Codetank_TEST.txt
software/Apple-1 demos/: 50th.apl.txt  beer.apl.txt  cat.apl.txt  cellular.apl.txt  life.txt  mandelbrot-65.apl.txt  pasart.apl.txt
software/Apple-1 dev/: ENHANCEDBASIC.txt  LibSmoke.txt  WozMonitor.txt  a1assembler.apl.txt  apple1_basic-d.apl.txt  basic-pagetable.apl.txt  dis-assembler.apl.txt  fig-fORTH110.txt
software/Apple-1 games/: 15-puzzle.apl.txt  2048.apl.txt  LittleTower-1.0.txt  Maze2_Backtracker.txt  Maze_Sidewinder.txt  Sokoban.txt  lunar-lander-text-only.apl.txt  mastermind.apl.txt  microchess.apl.txt  peg-solitaire.apl.txt  shut-the-box.apl.txt  worple.apl.txt
software/Apple-1_TMS_CC65/: checksum.txt  chrome_dino.txt  demo.txt  demo_screen1.txt  frogger_codetank.txt  graphs.txt  hello_screen1.txt  hello_world.txt  picshow.txt  rogue_c.txt  sprite_animals.txt  tetris.txt  text_adventure.txt
software/Graphic HGR/: HGR_Life.txt  HGR_Mandelbrot.txt  HGR_Maze.txt  HGR_Sierpinski.txt  HGR_Sokoban.txt
software/Graphic HGR/tests/: HGR_BBFontShow.txt  HGR_SymbolsShow.txt  HGR_TestCard.txt
software/Graphic TMS9918/: TMS_Chess.bin.hi  TMS_Chess.bin.lo  TMS_Chess.txt  TMS_Clone.txt  TMS_Life.txt  TMS_Logo.txt  TMS_Logo_16k.txt  TMS_Mandel.txt  TMS_Maze3D.txt  TMS_Nyan_Fantasy.txt  TMS_OrbitalPool.txt  TMS_Plasma.txt  TMS_SilBench.txt  TMS_Snake.txt  TMS_Sokoban.txt  TMS_Stars.txt  TMS_Tunnel.txt  TMS_Vague.txt
software/Graphic TMS9918/tests/: TMS_Clone.txt  TMS_SiliconBench.txt  TMS_Split.txt
software/Graphic gt-6144/: GT1_Hello.txt  GT1_Life.txt
software/Integer_basic/: blackjack.apl.txt  hamurabi.apl.txt  lunar-lander-ascii-graphics.apl.txt  mini-startrek.apl.txt  resistor-calculator.apl.txt  stopwatch.apl.txt  twinkle.apl.txt
software/NET/: ATmodem.txt  bbs.fozztexx.com.txt  bbs.retrocampus.com.txt
software/SOUND SID/: Claudio_PARMIGIANI_SID_PIANO_ORIG.txt
software/a1io_rtc/: RtcClock.txt  VIACLOCK.txt
software/tests/: ASCII_hex_Terminal.txt  ASCII_hex_keyboard.txt
software/utils/: party.apl.txt  typewriter.apl.txt
tests/: 6502_decimal_test.cfg  apple1_sample.conf  font5x7.h  gen_harte_fixture.py  term_dummy.c  test_aci.c  test_bus.c  test_config.c  test_cpu.c  test_dualram.c  test_interrupts.c  test_mem.c  test_tomharte.c  test_vfs.c
tools/: amalgamate.py  amalgamate.rc  amalgamate_plan9.awk  amalgamate_unixware.awk  gen_harte_fixture.py
